force-app/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <description>Track maintenance, calibration, or issue tickets for instruments.</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{YYYY}-{00000}</displayFormat>
        <label>Service Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>