force-app/main/default/objects/Service_Request__c/fields/Assigned_Technician__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>