force-app/main/default/objects/Service_Request__c/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instrument</label>
    <referenceTo>Instrument__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>