force-app/main/default/objects/Service_Request__c/recordTypes/Calibration.recordType-meta.xml
<RecordType>
    <fullName>Calibration</fullName>
    <active>true</active>
    <label>Calibration</label>
</RecordType>