force-app/main/default/objects/Service_Request__c/recordTypes/Repair.recordType-meta.xml
<RecordType>
    <fullName>Repair</fullName>
    <active>true</active>
    <label>Repair</label>
</RecordType>