force-app/main/default/objects/Service_Request__c/validationRules/VR_SR_Instrument_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SR_Instrument_Required</fullName>
    <active>true</active>
    <description>Ensures an Instrument is selected for the request</description>
    <errorConditionFormula>ISBLANK( Instrument__c )</errorConditionFormula>
    <errorDisplayField>Instrument__c</errorDisplayField>
    <errorMessage>An Instrument is required.</errorMessage>
</ValidationRule>