force-app/main/default/objects/Service_Request__c/validationRules/VR_SR_RequestDate_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SR_RequestDate_Required</fullName>
    <active>true</active>
    <description>Ensures the Request Date is provided.</description>
    <errorConditionFormula>ISBLANK( Request_Date__c )</errorConditionFormula>
    <errorDisplayField>Request_Date__c</errorDisplayField>
    <errorMessage>Request Date is required.</errorMessage>
</ValidationRule>