force-app/main/default/objects/Service_Request__c/validationRules/VR_SR_Severity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SR_Severity_Required</fullName>
    <active>true</active>
    <description>Ensures Severity is chosen for the required service request.</description>
    <errorConditionFormula>AND
     (
        ISBLANK( TEXT(Severity__c) ) ,
        OR(
             RecordType.Name = &quot;Repair&quot;,
             RecordType.Name = &quot;Calibration&quot;
           )
      )</errorConditionFormula>
    <errorDisplayField>Severity__c</errorDisplayField>
    <errorMessage>Severity is required.</errorMessage>
</ValidationRule>