force-app/main/default/objects/Service_Request__c/validationRules/VR_SR_Technician_ForCalibration_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SR_Technician_ForCalibration_Required</fullName>
    <active>true</active>
    <description>Ensure that the user must assign a technician for the calibration request type.</description>
    <errorConditionFormula>AND
    (
       ISBLANK( Assigned_Technician__c ),
       RecordType.Name = &quot;Calibration&quot;
     )</errorConditionFormula>
    <errorDisplayField>Assigned_Technician__c</errorDisplayField>
    <errorMessage>An Assigned Technician is required for Calibration requests.</errorMessage>
</ValidationRule>